kustomize/pgadmin/pgadmin_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: postgres-operator
spec:
  selector:
    postgres-operator.crunchydata.com/data: pgadmin
  ports:
    - name: http
      protocol: TCP
      port: 5050
      targetPort: 5050
  type: LoadBalancer
  loadBalancerIP: 192.168.50.166
