kustomize/pgadmin/pgadmin-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0-rc1-1-ge79e5af
  name: cilium
  namespace: postgres-operator
spec:
  gatewayClassName: cilium
  listeners:
  - hostname: pgadmin4.baudolino84.com
    name: pgadmin4-baudolino84-com-http
    port: 80
    protocol: HTTP
  - hostname: pgadmin4.baudolino84.com
    name: pgadmin4-baudolino84-com-https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: null
        kind: null
        name: default-tls
  addresses:
  - type: IPAddress
    value: "10.50.50.227"
