kustomize/pgadmin/pgadmin-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0-rc1-1-ge79e5af
  name: pgadmin4-pgadmin4-baudolino84-com
  namespace: postgres-operator
spec:
  hostnames:
  - pgadmin4.baudolino84.com
  parentRefs:
  - name: cilium
  rules:
  - backendRefs:
    - name: pgadmin-service
      port: 5050
    matches:
    - path:
        type: PathPrefix
        value: /
