kustomize/pgadmin/pgadmin4ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin4
  namespace: postgres-operator
  labels:
    app.kubernetes.io/name: pgadmin4
  annotations:
#    gethomepage.dev/description: Dynamically Detected Homepage
#    gethomepage.dev/enabled: "true"
#    gethomepage.dev/group: Cluster Management
#    gethomepage.dev/icon: homepage.png
#    gethomepage.dev/name: Homepage
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - pgadmin4.baudolino84.com
    secretName: pgadmin4-tls
  ingressClassName: "public"
  rules:
    - host: pgadmin4.baudolino84.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 5050
